@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
 
+    <addon id="Gigathek" name="Deutsche öffentlich-rechtliche TV-Mediatheken" version="1.0.17" provider-name="68000a">
+        <requires>
+            <import addon="xbmc.python" version="2.25.0"/>
+        </requires>
+        <extension point="xbmc.addon.repository" name="Deutsche TV-Mediatheken Add-on Repository">
+        </extension>
+        <extension point="xbmc.addon.metadata">
+            <summary>Deutsche öffentlich-rechtliche TV-Mediatheken</summary>
+            <description>Download and install addons for German TV media libraries. Compatible with Kodi 17 "Krypton" and Kodi 18 "Leia". To upgrade this repository to Kodi 19 "Matrix" download file "Gigathek-1.0.19.zip" from this location: "https://github.com/68000a/Gigathek/tree/master/Gigathek" and install manually.</description>
+            <platform>all</platform>
+        </extension>
+    </addon>
+
     <addon id="plugin.video.3satmediathek" name="3sat Mediathek" version="1.3.6" provider-name="68000a">
         <requires>
             <import addon="xbmc.python" version="2.25.0"/>
